# autopilot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  config.example.yaml  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  daily-docs-update.yml  release.yml
core/: __init__.py  cli.py  config.py  db.py  infra.py  logger.py  migrate.py  notify.py  plugin.py  registry.py  runner.py  state_machine.py  watcher.py
core/migrations/: 001_baseline.py  002_schema_version_pk.py  003_add_parallel_support.py  __init__.py
core/workflows/: __init__.py
docs/: architecture.md  faq.md  plugin-development.md  quickstart.md  req-dev-workflow.md  requirement-queue.md  state-machine.md  workflow-development.md
docs/en/: architecture.md  faq.md  plugin-development.md  quickstart.md  state-machine.md  workflow-development.md
docs/screenshots/: README.md
examples/: README.en.md  README.md
examples/data_pipeline/: workflow.py  workflow.yaml
examples/dev/: config.example.yaml  workflow.py  workflow.yaml
examples/doc_gen/: workflow.py  workflow.yaml
examples/parallel_build/: workflow.py  workflow.yaml
examples/plugins/: README.md
examples/plugins/autopilot-webui/: pyproject.toml
examples/plugins/autopilot-webui/autopilot_webui/: __init__.py  server.py
examples/plugins/autopilot-webui/autopilot_webui/templates/: index.html
examples/req_review/: config.example.yaml  workflow.py  workflow.yaml
examples/workflows/: README.en.md  README.md
knowledge/: architecture.md  state-machine.md  workflow-development.md
prompts/: code-review.md  development.md  plan-design.md  plan-review.md  pr-description.md  requirement-review.md
src/: cli.ts  index.ts
src/agents/: agent.ts  cli-status.ts  model-list.ts  pending-questions.ts  registry.ts  tools.ts  types.ts
src/cli/: index.ts  workflow.ts
src/client/: http.ts  index.ts  ws.ts
src/core/: artifacts.ts  atomic-write.ts  autopilot-resolver.ts  config.ts  db.ts  gitmodules-parser.ts  infra.ts  logger.ts  manifest.ts  (+22 more)
tests/: agents.test.ts  chat-tools-submodule.test.ts  chat-tools-workflow.test.ts  cli-status.test.ts  cli.test.ts  config.test.ts  conftest.py  daemon-log.test.ts  db.test.ts  gitmodules-parser.test.ts  infra.test.ts  logger.test.ts  manifest.test.ts  migration-007.test.ts  model-list.test.ts  phase-validation.test.ts  pr-poller.test.ts  rebuild-index.test.ts  registry-multi-source.test.ts  registry.test.ts  repos.crud.test.ts  repos.test.ts  req_dev_e2e.test.ts  req_dev_setup.test.ts  requirement-scheduler-integration.test.ts  requirement-scheduler.test.ts  requirement-sub-prs.test.ts  requirements.test.ts  requirements_chat.test.ts  routes-submodule-api.test.ts  routes-workflow-api.test.ts  runner.test.ts  sessions.test.ts  single-writer-invariant.test.ts  state-machine.test.ts  submodules.test.ts  task-logs.test.ts  test_cli.py  test_config.py  test_db.py  (+21 more)
(+129 files in other folders)
